# usd-rs

./: .gitignore  Cargo.toml  README.md
ar/: Cargo.toml  README.md
ar/src/: asset.rs  asset_info.rs  lib.rs  package_utils.rs  resolved_path.rs  resolver.rs  resolver_context.rs  writable_asset.rs
ar/src/resolver/: error.rs  v1.rs  v2.rs
ar/src/resolver/v1/: wrapper.rs
ar/src/resolver/v2/: wrapper.rs
ar/src/resolver_context/: client_context.rs  resolver_context_v1.rs  resolver_context_v2.rs
plugin/: Cargo.toml
plugin/src/: info.rs  lib.rs  plugin.rs  plugin_map.rs  registry.rs
plugin/src/info/: registration_metadata.rs
plugin/tests/: info.rs
