[package]
name = "ar"
version = "0.1.0"
authors = ["Blessan Abraham <meetblessan@gmail.com>"]
edition = "2018"

[features]
resolver_v1 = []
resolver_v2 = []
std = []

[dependencies]
cfg-if = "1.0"
lazy_static = "1.4"
log = { version = "0.4", features = ["serde", "max_level_debug", "release_max_level_warn"] }

