[package]
name = "usd-plugin"
version = "0.1.0"
authors = ["Blessan Abraham <meetblessan@gmail.com>"]
edition = "2018"

[features]
default = []
std = ["serde/default", "serde_json/default"]
python_support_enabled = []

[dependencies]
lazy_static = "1.4"
wasmer-runtime = "0.17"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

[dev-dependencies]
serde_test = "1.0"
